# rapidrubik-test

./: Cargo.toml  README.md  index.html  index.js
librapidrubik/: Cargo.toml
librapidrubik/src/: lib.rs
pkg/: package.json  rapidrubik.d.ts  rapidrubik.js  rapidrubik_bg.wasm  rapidrubik_bg.wasm.d.ts
src/: lib.rs
